codepkg/objects/Project_Site__c.object
<CustomObject>
    <fields>
        <fullName>Select_applicable_project_type_formula__c</fullName>
        <formula>IF ( INCLUDES ( Application_Extension__r.Select_applicable_project_type_s__c , &quot;Ignition Resistant Construction&quot; ), &quot;Ignition Resistant Construction;&quot;,null ) &amp;
IF ( INCLUDES ( Application_Extension__r.Select_applicable_project_type_s__c , &quot;Defensible Space&quot; ), &quot;Defensible Space;&quot;,null ) &amp;
IF ( INCLUDES ( Application_Extension__r.Select_applicable_project_type_s__c , &quot;Hazardous Fuels Reduction&quot; ), &quot;Hazardous Fuels Reduction;&quot;,null ) &amp;
IF ( INCLUDES ( Application_Extension__r.Select_applicable_project_type_s__c , &quot;Post-Wildfire Revegetation&quot; ), &quot;Post-Wildfire Revegetation;&quot;,null )</formula>
        <label>Select applicable project type formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severe_Repetitive_Loss_Structure__c</fullName>
        <label>Severe Repetitive Loss Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <formula>IF(ISBLANK(Address_Line_1__c) , &apos;&apos;, Address_Line_1__c )+ IF(ISBLANK(Address_Line_2__c) , &apos;&apos;, &apos;, &apos;+Address_Line_2__c ) + IF(ISBLANK(TEXT( County__c )) , &apos;&apos;, &apos;, &apos;+TEXT( County__c ))+ IF(ISBLANK(City__c) , &apos;&apos;, &apos;, &apos;+City__c ) +IF(ISBLANK(TEXT(Project_Site_State__c)) , &apos;&apos;, &apos;, &apos;+TEXT(Project_Site_State__c))+ IF(ISBLANK(Postal_Code__c) , &apos;&apos;, &apos;, &apos;+Postal_Code__c)</formula>
        <label>Site Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Location__c</fullName>
        <label>Site Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Spill_cleanup_equipment_on_site__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Spill cleanup equipment on site</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spill_prevention_and_retention_plan__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Spill prevention and retention plan</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Structure_Condition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Structure Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structure_Square_Footage__c</fullName>
        <label>Structure Square Footage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Structure_Type_Drainage__c</fullName>
        <label>Structure Type Drainage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Culvert</fullName>
                </value>
                <value>
                    <fullName>Debris Basin</fullName>
                </value>
                <value>
                    <fullName>Strom Drain</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Structure_Type_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Structure Type Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Structure_Type__c</fullName>
        <label>Structure Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One story</fullName>
                </value>
                <value>
                    <fullName>Two story</fullName>
                </value>
                <value>
                    <fullName>Split level</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Structure_capable_of_dry_floodproofing__c</fullName>
        <inlineHelpText>Reference: FEMA P-936/July 2013 Floodproofing Non-Residential Buildings, Section 2.5 Functional, Operational, and Economic Factors</inlineHelpText>
        <label>Structure capable of dry-floodproofing?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substantially_Damaged__c</fullName>
        <label>Substantially Damaged</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Assessor_Value_PreEvent_Market_Value__c</fullName>
        <label>Tax Assessor Value/PreEvent Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tenant_Occupied__c</fullName>
        <label>Tenant Occupied</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tiolets_hand_washing_within_guidance__c</fullName>
        <label>Tiolets/hand washing within guidance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tornado_distance_travel_time_limits__c</fullName>
        <label>Tornado distance/travel time limits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_sq_ft_prinicple_structure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Total sq/ft prinicple structure</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treatment_within_2_miles_of_structures__c</fullName>
        <label>Treatment within 2 miles of structures?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Residence__c</fullName>
        <label>Type of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family</fullName>
                </value>
                <value>
                    <fullName>Multi-family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Tsunami_vertical_evac_safe_area__c</fullName>
        <label>Type of Tsunami vertical evac safe area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vertical Evacuation</fullName>
                </value>
                <value>
                    <fullName>Engineered High Ground</fullName>
                </value>
                <value>
                    <fullName>Incorporation of Vertical Evacuation in New Buildings</fullName>
                </value>
                <value>
                    <fullName>Reinforcements for Existing Buildings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Types_of_vegetation_fuels_to_be_removed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Types of vegetation/fuels to be removed</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Upstream_downstream_considerations__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This analysis should be inclusive of impacts to habitat, flooding, sediment discharge, floodplains, etc.

Reference: 2015 HMA Guidance, Part V A.2.3; Executive Order 11988</inlineHelpText>
        <label>Upstream/downstream considerations</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Usable_sq_ft_accomodate_occupants__c</fullName>
        <label>Usable sq ft accomodate # occupants</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warning_system_notification_for_evac__c</fullName>
        <label>Warning system notification for evac</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_Standards_and_Codes_used__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference: 2015 HMA Guidance, Part IV H.1.1 &amp; H.4.2

If your community has adopted codes and standards which will be applied to this project (e.g. all stormwater infrastructure must be designed to 25 year flood event) please discuss, cite relevant code and attach documentation.</inlineHelpText>
        <label>What Standards and Codes used?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_current_building_use__c</fullName>
        <inlineHelpText>Note: Floodproofing is not an eligible project type for residential buildings

Reference: 44 CFR 80.17 (A) &amp; 44 CFR 80.11 (E)</inlineHelpText>
        <label>What is the current building use?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>residential</fullName>
                </value>
                <value>
                    <fullName>commercial</fullName>
                </value>
                <value>
                    <fullName>public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_will_be_done_with_removed_material__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>What will be done with removed material</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Why_is_elevation_not_a_feasible_option__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Why is elevation not a feasible option?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_barriers_fencing_be_installed__c</fullName>
        <label>Will barriers/fencing be installed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_herbicides_bilogicials_be_used__c</fullName>
        <label>Will herbicides/bilogicials be used?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>review_of_design_for_schools_special_pop__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>review of design for schools/special pop</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Project Site</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Project Site   Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>